[package]
name = "social-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "social-blog"
path = "src/bin/social-blog/main.rs"

[dependencies]
prost = "0.9"
tonic = {version = "0.6.2", features = ["tls", "compression"]}
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
uuid = {version = "0.8.2", features = ["serde", "v4"] }

[build-dependencies]
tonic-build = {version = "0.6.2", features = ["compression","prost"]}
