[package]
name = "social-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "social-blog"
path = "src/bin/social-blog/main.rs"

[dependencies]
prost = "0.10.1"
prost-types = "0.10.1"
json = "0.12.4"
pulldown-cmark = { version = "0.9.1", default-features = false }
tonic = {version = "0.7.1", features = ["tls", "compression"]}
tokio = {version = "1.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"]}
uuid = {version = "1.0.0", features = ["serde", "v4"] }
chrono = {versuin = "0.4.9" }

[build-dependencies]
tonic-build = {version = "0.7.1", features = ["compression","prost"]}
